--- a/Src/Merge.rc
+++ b/Src/Merge.rc
@@ -117,7 +117,7 @@ IDR_DIRDOCTYPE MENU
         MENUITEM "Cl&ose", ID_FILE_CLOSE
         MENUITEM "Clo&se All", ID_WINDOW_CLOSEALL
         MENUITEM SEPARATOR
-        MENUITEM "Change &Pane\tF6", ID_WINDOW_CHANGE_PANE
+        MENUITEM "Change &Pane\tAlt+PgDown", ID_WINDOW_CHANGE_PANE
         MENUITEM SEPARATOR
         MENUITEM "Tile &Horizontally", ID_WINDOW_TILE_HORZ
         MENUITEM "Tile &Vertically", ID_WINDOW_TILE_VERT
@@ -620,7 +620,7 @@ IDR_SQLITEDOCTYPE MENU
         MENUITEM "Cl&ose", ID_FILE_CLOSE
         MENUITEM "Clo&se All", ID_WINDOW_CLOSEALL
         MENUITEM SEPARATOR
-        MENUITEM "Change &Pane\tF6", ID_WINDOW_CHANGE_PANE
+        MENUITEM "Change &Pane\tAlt+PgDown", ID_WINDOW_CHANGE_PANE
         MENUITEM SEPARATOR
         MENUITEM "Tile &Horizontally", ID_WINDOW_TILE_HORZ
         MENUITEM "Tile &Vertically", ID_WINDOW_TILE_VERT
@@ -690,7 +690,7 @@ IDR_MAINFRAME MENU
         MENUITEM "Cl&ose", ID_FILE_CLOSE
         MENUITEM "Clo&se All", ID_WINDOW_CLOSEALL
         MENUITEM SEPARATOR
-        MENUITEM "Change &Pane\tF6", ID_WINDOW_CHANGE_PANE
+        MENUITEM "Change &Pane\tAlt+PgDown", ID_WINDOW_CHANGE_PANE
         MENUITEM SEPARATOR
         MENUITEM "Tile &Horizontally", ID_WINDOW_TILE_HORZ
         MENUITEM "Tile &Vertically", ID_WINDOW_TILE_VERT
@@ -823,7 +823,7 @@ IDR_MERGEDOCTYPE MENU
         MENUITEM "View &Margins", ID_VIEW_FILEMARGIN, HELP
         MENUITEM "View &Rulers", ID_VIEW_RULER, HELP
         MENUITEM "Table Layout\tCtrl+T", ID_VIEW_TABLELAYOUT, HELP
-        MENUITEM "Wr&ap Lines", ID_VIEW_WORDWRAP, HELP
+        MENUITEM "Wr&ap Lines\tCtrl+Shift+W", ID_VIEW_WORDWRAP, HELP
         MENUITEM "Separate combining characters\tCtrl+M", ID_VIEW_SEPARATE_COMBINING_CHARS, HELP
         MENUITEM SEPARATOR
         MENUITEM "Swap Panes\tCtrl+U", ID_VIEW_SWAPPANES
@@ -877,7 +877,7 @@ IDR_MERGEDOCTYPE MENU
         MENUITEM "Cl&ose", ID_FILE_CLOSE
         MENUITEM "Clo&se All", ID_WINDOW_CLOSEALL
         MENUITEM SEPARATOR
-        MENUITEM "Change &Pane\tF6", ID_WINDOW_CHANGE_PANE
+        MENUITEM "Change &Pane\tAlt+PgDown", ID_WINDOW_CHANGE_PANE
         MENUITEM SEPARATOR
         MENUITEM "Tile &Horizontally", ID_WINDOW_TILE_HORZ
         MENUITEM "Tile &Vertically", ID_WINDOW_TILE_VERT
@@ -2498,7 +2498,7 @@ STRINGTABLE
     ID_VIEW_LINEDIFFS             "Shows differences inside lines with different colors\nShow Line Difference"
     ID_VIEW_SWAPPANES             "Swap the positions of the two panes"
     ID_VIEW_LINENUMBERS           "Shows line numbers\nShow Line Numbers"
-    ID_VIEW_WORDWRAP              "Enable word wrap\nWrap Lines"
+    ID_VIEW_WORDWRAP              "Enable word wrap\nWrap Lines (Ctrl+Shift+W)"
     ID_VIEW_FILEMARGIN            "Shows selection margins for both panes\nShow Selection Margins"
     ID_VIEW_RULER                 "Shows horizontal rulers for both panes\nShow Horizontal Rulers"
     ID_VIEW_ZOOMIN                "Increase text size"
@@ -2614,6 +2614,7 @@ IDR_MAINFRAME ACCELERATORS
     "U",            ID_EDIT_UPPERCASE, VIRTKEY, CONTROL, SHIFT
     "V",            ID_EDIT_PASTE, VIRTKEY, CONTROL
     "W",            ID_FILE_CLOSE, VIRTKEY, CONTROL
+    "W",            ID_VIEW_WORDWRAP, VIRTKEY, CONTROL, SHIFT
     "X",            ID_EDIT_CUT, VIRTKEY, CONTROL
     "Y",            ID_EDIT_REDO, VIRTKEY, CONTROL
     "Z",            ID_EDIT_UNDO, VIRTKEY, CONTROL
@@ -2626,8 +2627,9 @@ IDR_MAINFRAME ACCELERATORS
     VK_END,         ID_LASTDIFF, VIRTKEY, ALT
     VK_F5,          ID_REFRESH, VIRTKEY
     VK_F5,          ID_DIR_RESCAN, VIRTKEY, CONTROL
-    VK_F6,          ID_NEXT_PANE, VIRTKEY
-    VK_F6,          ID_PREV_PANE, VIRTKEY, SHIFT
+    VK_NEXT,        ID_NEXT_PANE, VIRTKEY, ALT
+    VK_PRIOR,       ID_PREV_PANE, VIRTKEY, ALT
+    VK_F6,          ID_DIFF_PANE, VIRTKEY
     VK_F9,          ID_FILE_MERGINGMODE, VIRTKEY
     VK_HOME,        ID_FIRSTDIFF, VIRTKEY, ALT
     VK_INSERT,      ID_EDIT_COPY, VIRTKEY, CONTROL
