--- a/Translations/WinMerge/MergeLang.rc
+++ b/Translations/WinMerge/MergeLang.rc
@@ -2614,6 +2614,7 @@ IDR_MAINFRAME ACCELERATORS
     "U",            ID_EDIT_UPPERCASE, VIRTKEY, CONTROL, SHIFT
     "V",            ID_EDIT_PASTE, VIRTKEY, CONTROL
     "W",            ID_FILE_CLOSE, VIRTKEY, CONTROL
+    "W",            ID_VIEW_WORDWRAP, VIRTKEY, CONTROL, SHIFT
     "X",            ID_EDIT_CUT, VIRTKEY, CONTROL
     "Y",            ID_EDIT_REDO, VIRTKEY, CONTROL
     "Z",            ID_EDIT_UNDO, VIRTKEY, CONTROL
@@ -2626,8 +2627,9 @@ IDR_MAINFRAME ACCELERATORS
     VK_END,         ID_LASTDIFF, VIRTKEY, ALT
     VK_F5,          ID_REFRESH, VIRTKEY
     VK_F5,          ID_DIR_RESCAN, VIRTKEY, CONTROL
-    VK_F6,          ID_NEXT_PANE, VIRTKEY
-    VK_F6,          ID_PREV_PANE, VIRTKEY, SHIFT
+    VK_NEXT,        ID_NEXT_PANE, VIRTKEY, ALT
+    VK_PRIOR,       ID_PREV_PANE, VIRTKEY, ALT
+    VK_F6,          ID_DIFF_PANE, VIRTKEY
     VK_F9,          ID_FILE_MERGINGMODE, VIRTKEY
     VK_HOME,        ID_FIRSTDIFF, VIRTKEY, ALT
     VK_INSERT,      ID_EDIT_COPY, VIRTKEY, CONTROL
