--- a/Src/Merge.rc
+++ b/Src/Merge.rc
@@ -117,7 +117,7 @@ IDR_DIRDOCTYPE MENU
         MENUITEM "Cl&ose", ID_FILE_CLOSE
         MENUITEM "Clo&se All", ID_WINDOW_CLOSEALL
         MENUITEM SEPARATOR
-        MENUITEM "Change &Pane\tAlt+PgDown", ID_WINDOW_CHANGE_PANE
+        MENUITEM "Change &Pane\tF12", ID_WINDOW_CHANGE_PANE
         MENUITEM SEPARATOR
         MENUITEM "Tile &Horizontally", ID_WINDOW_TILE_HORZ
         MENUITEM "Tile &Vertically", ID_WINDOW_TILE_VERT
@@ -620,7 +620,7 @@ IDR_SQLITEDOCTYPE MENU
         MENUITEM "Cl&ose", ID_FILE_CLOSE
         MENUITEM "Clo&se All", ID_WINDOW_CLOSEALL
         MENUITEM SEPARATOR
-        MENUITEM "Change &Pane\tAlt+PgDown", ID_WINDOW_CHANGE_PANE
+        MENUITEM "Change &Pane\tF12", ID_WINDOW_CHANGE_PANE
         MENUITEM SEPARATOR
         MENUITEM "Tile &Horizontally", ID_WINDOW_TILE_HORZ
         MENUITEM "Tile &Vertically", ID_WINDOW_TILE_VERT
@@ -690,7 +690,7 @@ IDR_MAINFRAME MENU
         MENUITEM "Cl&ose", ID_FILE_CLOSE
         MENUITEM "Clo&se All", ID_WINDOW_CLOSEALL
         MENUITEM SEPARATOR
-        MENUITEM "Change &Pane\tAlt+PgDown", ID_WINDOW_CHANGE_PANE
+        MENUITEM "Change &Pane\tF12", ID_WINDOW_CHANGE_PANE
         MENUITEM SEPARATOR
         MENUITEM "Tile &Horizontally", ID_WINDOW_TILE_HORZ
         MENUITEM "Tile &Vertically", ID_WINDOW_TILE_VERT
@@ -877,7 +877,7 @@ IDR_MERGEDOCTYPE MENU
         MENUITEM "Cl&ose", ID_FILE_CLOSE
         MENUITEM "Clo&se All", ID_WINDOW_CLOSEALL
         MENUITEM SEPARATOR
-        MENUITEM "Change &Pane\tAlt+PgDown", ID_WINDOW_CHANGE_PANE
+        MENUITEM "Change &Pane\tF12", ID_WINDOW_CHANGE_PANE
         MENUITEM SEPARATOR
         MENUITEM "Tile &Horizontally", ID_WINDOW_TILE_HORZ
         MENUITEM "Tile &Vertically", ID_WINDOW_TILE_VERT
@@ -2094,8 +2094,8 @@ STRINGTABLE
     ID_FILE_MRU_FILE14            "Open this document"
     ID_FILE_MRU_FILE15            "Open this document"
     ID_FILE_MRU_FILE16            "Open this document"
-    ID_NEXT_PANE                  "Switch to the next window pane\nNext Pane"
-    ID_PREV_PANE                  "Switch back to the previous window pane\nPrevious Pane"
+    ID_RIGHT_PANE                 "Switch to the right window pane\nRight Pane"
+    ID_LEFT_PANE                  "Switch to the left window pane\nLeft Pane"
     ID_WINDOW_CASCADE             "Arrange windows so they overlap\nCascade Windows"
     ID_WINDOW_TILE_HORZ           "Arrange windows as non-overlapping tiles horizontally\nTile Windows Horizontally"
     ID_WINDOW_TILE_VERT           "Arrange windows as non-overlapping tiles vertically\nTile Windows Vertically"
@@ -2627,8 +2627,9 @@ IDR_MAINFRAME ACCELERATORS
     VK_END,         ID_LASTDIFF, VIRTKEY, ALT
     VK_F5,          ID_REFRESH, VIRTKEY
     VK_F5,          ID_DIR_RESCAN, VIRTKEY, CONTROL
-    VK_NEXT,        ID_NEXT_PANE, VIRTKEY, ALT
-    VK_PRIOR,       ID_PREV_PANE, VIRTKEY, ALT
+	VK_NEXT,        ID_RIGHT_PANE, VIRTKEY, ALT
+	VK_PRIOR,       ID_LEFT_PANE, VIRTKEY, ALT
+	VK_F12,         ID_WINDOW_CHANGE_PANE, VIRTKEY
     VK_F6,          ID_DIFF_PANE, VIRTKEY
     VK_F9,          ID_FILE_MERGINGMODE, VIRTKEY
     VK_HOME,        ID_FIRSTDIFF, VIRTKEY, ALT
